fixed logo spacing next to nav

--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -122,6 +122,7 @@ hr {
 
 #mainNav {
 	margin-bottom: 40px;
+	margin-top: 20px;
 }
 
 .nav a {
